day-04-storage-security/manifests/06-service-api.yaml
apiVersion: v1
kind: Service
metadata:
  name: api-service
  namespace: capstone
  labels:
    app: api
spec:
  type: ClusterIP
  selector:
    app: api
  ports:
  - port: 80
    targetPort: 8080
    protocol: TCP
    name: http
