day-04-storage-security/manifests/09-service-web.yaml
apiVersion: v1
kind: Service
metadata:
  name: task-web-service
  labels:
    app: web
spec:
  type: ClusterIP
  selector:
    app: web
    tier: frontend
  ports:
  - name: http
    protocol: TCP
    port: 80
    targetPort: 80
